# RDR-Extended-Native

./: .gitignore  CMakeLists.txt  CMakeSettings.json  NATIVES.md  README.md
native/: native.hpp
src/: Natives.hpp  main.cpp  pch.hpp
src/extended/: Extended.cpp  Extended.hpp  Function.hpp  Native.hpp
src/hooking/: Hooking.cpp  Hooking.hpp
src/logger/: Logger.hpp
src/memory/: All.hpp  Fwddec.hpp  Handle.hpp  Module.cpp  Module.hpp  Pattern.cpp  Pattern.hpp  PatternBatch.cpp  PatternBatch.hpp  Range.cpp  Range.hpp
src/pointers/: Pointers.cpp  Pointers.hpp
src/rdr/: Math.h  Structs.h  sagActor.hpp  scrNativeCallContext.hpp  scrValue.hpp  scrVector.hpp
